Fix - Overflowing of Amount field

--- a/src/pages/Send/components/SendAmountField/sendAmountField.m.scss
+++ b/src/pages/Send/components/SendAmountField/sendAmountField.m.scss
@@ -134,6 +134,10 @@
   > .amount {
     color: $main-black-40;
     min-width: 60px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 60%;
   }
 
   > .fee {
